# pielach_stac

./: .gitignore  README.md  pyproject.toml  tree_test.txt  update_catalog.bat  view_catalog.bat
academic/: literatur.bib
academic/latex/: bachelorarbeit.tex  gliederung.txt
academic/obsidian/: TODO.md
browser/: README.md  index.html
browser/css/: 1576.149216ac.css
browser/js/: 1077.5e13a2d6.js  1198.37ca0372.js  1256.214f477f.js  1270.1b972985.js  1350.2646ccd8.js  1358.eb06126c.js  1364.7f53a0e0.js  1576.f34e7eff.js  1631.ab0659aa.js  1769.d3ddaaa3.js  1831.b0425d8f.js  1854.cbee1022.js  1869.c343ec6f.js  1890.f4db095e.js  1899.026530e6.js  1966.4c02c9ed.js  2021.6ab268bd.js  2027.5d7667e2.js  2043.4aac7817.js  2057.592baa27.js  2142.e5c98902.js  2251.3c0a8b9c.js  2290.3c0cd49c.js  2339.e26139a9.js  2466.b4c307aa.js  272.14702a34.js  2856.02e1204e.js  2888.828c4486.js  3407.ebb29207.js  344.ffa6a062.js  3443.b14df072.js  3450.c595a62f.js  356.7b955eac.js  3599.c95803d3.js  3729.8ff2708b.js  3752.46e2a374.js  3791.a74e70c4.js  3823.8c1fc808.js  4012.386e1450.js  (+96 more)
configs/: campaigns.yaml  catalog.yaml  sample_config.yaml
notebooks/: envtest.ipynb  pystac_test.ipynb  test.py
sample_configs/: sample_campaign.yaml  sample_config.yaml
scripts/: serve_catalog.py  tree_crawler.py
src/: cors_server.py  tac_raster.py  tile_and_convert.py
stac/: __init__.py  __main__.py
tests/: conftest.py  test_build.py  test_discover.py  test_extract.py  test_hierarchy.py  test_manager.py  test_pure.py  test_registry.py  test_thumbnail.py  test_tiles_merge.py
(+48 files in other folders)
